--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -14,7 +14,7 @@
   </style>
 </head>
 <body>
-<p class="p1"><span class="s1">--- layout: archive title: “News” permalink: /talks/ author_profile: true --- {% if site.talkmap_link == true %}</span></p>
+<p class="p1"><span class="s1">--- layout: archive title: "Talks and presentations" permalink: /talks/ author_profile: true --- {% if site.talkmap_link == true %}</span></p>
 <p class="p2"><span class="s2"><a href="file:///talkmap.html">See a map of all the places I've given a talk!</a></span></p>
 <p class="p1"><span class="s1">{% endif %} {% for post in site.talks reversed %} {% include archive-single-talk.html %} {% endfor %}</span></p>
 </body>
