--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,12 +1,25 @@
 ---
-layout: archive
+layout: single
 title: "Teaching"
 permalink: /teaching/
 author_profile: true
 ---
 
-{% include base_path %}
+## Teaching Experience
 
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %}
+<ul>
+  <li><strong>Aviation Finance</strong> - Undergraduate Course<br>
+      <em>The Hong Kong Polytechnic University, Logistics and Maritime Studies</em><br>
+      Semester 1, 2025/2026 Academic Year<br>
+      <em>Hong Kong</em></li>
+  
+  <li><strong>Teaching Experience 2</strong> - Workshop<br>
+      <em>University 1, Department</em><br>
+      2015<br>
+      <em>City, Country</em></li>
+  
+  <li><strong>Teaching Experience 1</strong> - Undergraduate Course<br>
+      <em>University 1, Department</em><br>
+      2014<br>
+      <em>City, Country</em></li>
+</ul>
