--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,21 +5,9 @@ permalink: /teaching/
 author_profile: true
 ---
 
-## Teaching Experience
-
+<h3>LGT3800</h3>
 <ul>
-  <li><strong>Aviation Finance</strong> - Undergraduate Course<br>
-      <em>The Hong Kong Polytechnic University, Logistics and Maritime Studies</em><br>
-      Semester 1, 2025/2026 Academic Year<br>
-      <em>Hong Kong</em></li>
-  
-  <li><strong>Teaching Experience 2</strong> - Workshop<br>
-      <em>University 1, Department</em><br>
-      2015<br>
-      <em>City, Country</em></li>
-  
-  <li><strong>Teaching Experience 1</strong> - Undergraduate Course<br>
-      <em>University 1, Department</em><br>
-      2014<br>
-      <em>City, Country</em></li>
+  <li>Aviation Finance (3 credits), The Hong Kong Polytechnic University, Fall 2025 (45 students)</li>
+  <li>Course description and additional details can be added here</li>
+  <li>Any other relevant information about this course</li>
 </ul>
