--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -8,6 +8,5 @@ author_profile: true
 <h3>LGT3800</h3>
 <ul>
   <li>Aviation Finance (3 credits), The Hong Kong Polytechnic University, Fall 2025 (45 students)</li>
-  <li>Course description and additional details can be added here</li>
-  <li>Any other relevant information about this course</li>
+  <li>This course masters aviation finance through fuel hedging, aircraft leasing, and airport slot trading. Learn risk management, real-option analysis, and fintech applications in the aviation industry.</li>
 </ul>
