--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -8,5 +8,5 @@ author_profile: true
 <h3>LGT3800</h3>
 <ul>
   <li>Aviation Finance (3 credits), The Hong Kong Polytechnic University, Fall 2025 (45 students)</li>
-  <li>This course masters aviation finance through fuel hedging, aircraft leasing, and airport slot trading. Learn risk management, real-option analysis, and fintech applications in the aviation industry.</li>
+  <li>This course explores key financial and operational decision-making in the aviation sector. It covers asset volatility, risk preferences, real-option analysis, fuel hedging, aircraft leasing, fintech applications, regulatory frameworks, cost of capital, and slot trading mechanisms.</li>
 </ul>
